complete footer section and fix required alignment

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="col-6">
         <h1 class="main-title">TOP STORY</h1>
         <div>
-          <a href="#"><img src="img/kobe.jpg" alt="kobe" style="width: 880px"></a>
+          <a href="#"><img src="img/kobe.jpg" alt="kobe" style="width: 880px;"></a>
           <div class="card-body">
             <h5 class="card-title">Kobe Bryant and His Daughter Killed in California Helicopter Crash</h5>
             <p class="card-text">Bryant, 41, was travelling with passengers in his private helicopter earlier this morning when the chopper experienced issues and crashed.</p>
@@ -195,14 +195,14 @@
       <div class="col">
         <h1 class="main-title opinion">OPINION</h1>
         <div class="row mb-4">
-          <img class="col-3" src="img/robert.jpg" alt="robert.jpg" style="width:200px">
+          <img class="col-3" src="img/robert.jpg" alt="robert.jpg" style="height: 100px;">
           <div class="col">
             <p class="side-para">Time for Europe and U.S. to Face China's Global Threat—Together</p>
             <p class="auth">BY ARIEL COHEN</p>
           </div>
         </div>
         <div class="row mb-4">
-          <img class="col-3" src="img/robert.jpg" alt="robert.jpg">
+          <img class="col-3" src="img/robert.jpg" alt="robert.jpg" style="height: 100px;">
           <div class="col">
             <p class="side-para">Americans Mistrust Church, Government and Big Money. Is a New Power Rising?</p>
             <p class="auth">BY HEATHER THOMPSON DAY</p>
@@ -210,21 +210,21 @@
         </div>
         <hr>
         <div class="row mb-4">
-          <img class="col-3" src="img/robert.jpg" alt="robert.jpg">
+          <img class="col-3" src="img/robert.jpg" alt="robert.jpg" style="height: 100px;">
           <div class="col">
             <p class="side-para">Why Anti-Trump Zealots Won't Stop Me Defending Our President's Constitutional Rights</p>
             <p class="auth">BY DOUG GORDON</p>
           </div>
         </div>
         <div class="row mb-4">
-          <img class="col-3" src="img/robert.jpg" alt="robert.jpg">
+          <img class="col-3" src="img/robert.jpg" alt="robert.jpg" style="height: 100px;">
           <div class="col">
             <p class="side-para">A Surprising Solution to Save American Democracy</p>
             <p class="auth">BY ALAN DERSHOWITZ</p>
           </div>
         </div>
         <div class="row mb-4">
-          <img class="col-3" src="img/robert.jpg" alt="robert.jpg">
+          <img class="col-3" src="img/robert.jpg" alt="robert.jpg" style="height: 100px;">
           <div class="col">
             <p class="side-para">We Impeached Trump for Gross Abuses of Power. What About the Davos Elite?</p>
             <p class="auth">BY  SHARON BLOCK AND BENJAMIN SACHS</p>
@@ -522,7 +522,6 @@
               <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
             </div>
           </div>
-          2 of 3
         </div>
         <div class="col">
           <div class="row mb-4">
@@ -543,19 +542,18 @@
               <p class="side-para">Trump Is Increasingly Damaging to Republicans. They're Fools to Let Him Off</p>
             </div>
           </div>
-          3 of 3
         </div>
       </div>
       <div class="img-con">
       <div class="row">
-        <div class="col-8">
-          <div class="col-8 ">
-          <div class="row mb-4">
-            <img class="col-3" src="img/md1.jpg" alt="md1" style="min-width: 300px; height: 350px;">
+        <div class="col-8 shadow-none p-4 mb-4 bg-light">
+          <div class="col-8">
+          <div class="row mb-4 ">
+            <img class="col-3 " src="img/md1.jpg" alt="md1" style="min-width: 300px; height: 350px;">
             <div class="col">
               <p  class="side-par2">Lorem ipsum, dolor sit<br> amet consectetur adipisicing elit. Animi, eum? </p>
               <p class="card-text">Lorem ipsum dolor sit<br>, amet consectetur adipisicing elit. Voluptas, dolores. </p>
-              <button>SUBSCRIBE  ></button>
+              <button class="button">SUBSCRIBE  </button>
             </div>
           </div>
         </div>
@@ -566,21 +564,22 @@
             <div class="col">
               <p  class="side-par2">China Warns of Medical </p>
               <p class="card-text">Chinese authorities say on the mainland there have been at least 2,744  </p>
-              <button>SIGN UP  ></button>
+              <button class="button">SIGN UP  ></button>
             </div>
           </div>
         </div>
       </div>
     </div>
-     
+    <div class="icon-container">
+      <h1 id="footer-news">THE NEWS WEEK</h1>
         <ul class="footer-icons">
-          <h1 id="footer-news">THE NEWS WEEK</h1>
-          <li class="footer-icon"><i class="fab fa-facebook-square"></i></li >
-          <li  class="footer-icon"><i class="fab fa-twitter"></i></li>
-          <li  class="footer-icon"><i class="fab fa-instagram"></i></li>
-          <li  class="footer-icon"><i class="fab fa-tumblr"></i></li>
-          <li  class="footer-icon"><i class="fab fa-linkedin-in"></i></li>
+          <li class="footer-icon"><a href="#"><i class="fab fa-facebook-square"></a></i></li >
+          <li  class="footer-icon"><a href="#"><i class="fab fa-twitter"></a></i></li>
+          <li  class="footer-icon"><a href="#"><i class="fab fa-instagram"></a></i></li>
+          <li  class="footer-icon"><a href="#"><i class="fab fa-tumblr"></a></i></li>
+          <li  class="footer-icon"><a href="#"><i class="fab fa-linkedin-in"></a></i></li>
         </ul>
+      </div>
         <hr>
         <ul class="footer-links">
           <h1>Editions:</h1>
