fix stylelint and HTML errors

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
 
     <!-- first nav section -->
-    <nav class="navbar navbar-expand bg-danger">
-      <ul class="navbar-nav justify-content-between w-75 mx-auto">
+    <div class="container">
+    <nav class="navbar navbar-expand bg-danger ">
+      <ul class="navbar-nav justify-content-between ">
           <li class="nav-item mt-2"> <span>Mon, Feb 10, 2020</span></li>
         <li class="nav-item "><a class="news-link" href="#">NEWSWEEK</a></li>
       <li class="nav-item d-flex">
@@ -25,6 +26,7 @@
       </li>
       </ul>
 </nav>
+</div>
 <!-- second nav section -->
 <ul class="nav w-70">
   <li class="nav-item">
@@ -125,7 +127,7 @@
         </div>
         <!-- culture and travel -->
         <div class="container2">
-          <h1>CULTURE & TRAVEL</h1>
+          <h1 class="main-title">CULTURE & TRAVEL</h1>
           <div class="row">
             <div class="col">
               <a href="#"><img src="https://d.newsweek.com/en/full/1565365/superman-oscar.webp?w=397&h=265&f=8f7f0442997e9bfd5ff72d199ac16d2c" alt="top-story" ></a>
@@ -341,7 +343,7 @@
   <!-- first footer section -->
   <!-- Editor's picks -->
   <footer class="mx-5">
-    <h1>IN THE MAGAZINE</h1>
+    <h1 class="main-title">IN THE MAGAZINE</h1>
     <div class="row">
       <div class="col-3">
         <div class="card">
@@ -424,7 +426,6 @@
             <div class="card-title">Black China: Africa's First Superpower Is Coming Sooner Than You Think</div>
           </div>
         </div>
-
         <div class="col-3">
           <div class="card">
             <img src="https://d.newsweek.com/en/full/1563948/united.webp?w=466&h=311&q=90&f=b080d82c464d309edc702183a4f7a9b3" alt="per3.jpg">
@@ -475,6 +476,7 @@
         </div>
       </div>
       <!-- featured slide shows -->
+      <h1 class="main-title">FEATURED SLIDE SHOW</h1>
       <div class="card-deck">
         <div class="card">
           <img class="card-img-top" src="https://d.newsweek.com/en/full/1560097/tozeur-tunisia.webp?w=397&h=265&f=69a77ef1bd7e21c060a7b7685b05a73d" alt="featured show">
@@ -551,7 +553,6 @@
               <h5 class="card-title">Lorem ipsum dolor sit amet.</h5>
             </div>
           </div>
-          1 of 3
         </div>
         <div class="col">
           <div class="card">
@@ -609,17 +610,17 @@
       </div>
     </div>
     <div class="icon-container">
-      <h1 id="footer-news ml-10">THE NEWS WEEK</h1>
+      <h1 class="footer-news">THE NEWS WEEK</h1>
         <ul class="footer-icons d-flex ml-auto">
-          <li class="footer-icon"><a href="#"><i class="fab fa-facebook-square"></a></i></li >
-          <li  class="footer-icon"><a href="#"><i class="fab fa-twitter"></a></i></li>
-          <li  class="footer-icon"><a href="#"><i class="fab fa-instagram"></a></i></li>
-          <li  class="footer-icon"><a href="#"><i class="fab fa-tumblr"></a></i></li>
-          <li  class="footer-icon"><a href="#"><i class="fab fa-linkedin-in"></a></i></li>
+          <li class="footer-icon"><a href="#"><i class="fab fa-facebook-square"></i></a></li >
+          <li  class="footer-icon"><a href="#"><i class="fab fa-twitter"></i></a></li>
+          <li  class="footer-icon"><a href="#"><i class="fab fa-instagram"></i></a></li>
+          <li  class="footer-icon"><a href="#"><i class="fab fa-tumblr"></i></a></li>
+          <li  class="footer-icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
         </ul>
       </div>
+      <h1>Editions:</h1>
         <ul class="footer-links d-flex  m-3 mb-8">
-          <h1>Editions:</h1>
           <li>ipsum dolor</li>
           <li>ipsum dolor</li>
           <li>ipsum dolor</li>
@@ -644,6 +645,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
-
-
 </html>
