add responsiveness for different screen sizes

--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
       <div class="col-xs-6 col-sm-3">
         <h1 class="main-title">FEATURED STORIES</h1>
         <div class="container">
-          <a href="#"><img src="https://d.newsweek.com/en/full/1565817/nato-summit-us-survey-approval-article-5.webp?w=397&h=265&q=90&f=6aa5d8f92e9339cbc661b5df1d406cd0" alt="stories" style="width: 425px;" ></a>
+          <a href="#"><img class="col-md-12" src="https://d.newsweek.com/en/full/1565817/nato-summit-us-survey-approval-article-5.webp?w=397&h=265&q=90&f=6aa5d8f92e9339cbc661b5df1d406cd0" alt="stories" style="width: 425px;" ></a>
           <div class="card-body">
             <h5 class="card-title">Support for NATO Falling Among Americans, New Survey Shows</h5>
             <p class="card-text">Decades after the end of the Holocaust with the closure of Nazi concentration camps U.S. forces helped liberate, the number of hate crimes against Jews in America hits a record high.</p>
           </div>
-          <a href="#"><img src="https://d.newsweek.com/en/full/1566003/volunteers-transport-medical-supplies-wuhan.webp?w=397&h=265&q=90&f=d302a348631c0873270facc16ea083b2" alt="stories" ></a>
+          <a href="#"><img class="col-md-12" src="https://d.newsweek.com/en/full/1566003/volunteers-transport-medical-supplies-wuhan.webp?w=397&h=265&q=90&f=d302a348631c0873270facc16ea083b2" alt="stories" ></a>
           <div class="card-body">
             <h5 class="card-title">Antarctica Faces Irreversible Glacial Melt 200 Years After Discovery</h5>
             <p class="card-text">The 27 January marks the first time the Antarctica mainland was seen with human eyes. Two hundred years later and it approaches a tipping point of irreversible glacial melt.</p>
           </div>
-          <a href="#"><img src="https://d.newsweek.com/en/full/1566004/mitt-romney.webp?w=397&h=265&q=90&f=516b7caa103eb01e85c6ff0c0aa02bc0" alt="stories" ></a>
+          <a href="#"><img class="col-md-12" src="https://d.newsweek.com/en/full/1566004/mitt-romney.webp?w=397&h=265&q=90&f=516b7caa103eb01e85c6ff0c0aa02bc0" alt="stories" ></a>
           <div class="card-body">
             <h5 class="card-title">Antarctica Faces Irreversible Glacial Melt 200 Years After Discovery</h5>
             <p class="card-text">The 27 January marks the first time the Antarctica mainland was seen with human eyes. Two hundred years later and it approaches a tipping point of irreversible glacial melt.</p>
           </div>
-          <a href="#"><img src="https://d.newsweek.com/en/full/1565994/cannabis-planet.webp?w=397&h=265&q=90&f=a1f1e8a1548ec6be67786481922e8bf9" alt="stories" ></a>
+          <a href="#"><img class="col-md-12" src="https://d.newsweek.com/en/full/1565994/cannabis-planet.webp?w=397&h=265&q=90&f=a1f1e8a1548ec6be67786481922e8bf9" alt="stories" ></a>
           <div class="card-body">
             <h5 class="card-title">Third U.S. Coronavirus Case Confirmed in Patient Who Traveled From Wuhan</h5>
             <p class="card-text">The infected person in Orange County, California is the third confirmed case of the illness in the U.S. so far as the global death toll reaches 56.</p>
@@ -95,12 +95,12 @@
             <p class="sm-p">Where Are the Cases of Coronavirus? Virus Has Spread to Eight Countries</p>
             <hr>
           </div>
-          <a href="#"><img src="https://d.newsweek.com/en/full/1565994/cannabis-planet.webp?w=397&h=265&q=90&f=a1f1e8a1548ec6be67786481922e8bf9" alt="stories" ></a>
+          <a href="#"><img class="col-md-12" src="https://d.newsweek.com/en/full/1565994/cannabis-planet.webp?w=397&h=265&q=90&f=a1f1e8a1548ec6be67786481922e8bf9" alt="stories" ></a>
           <div class="card-body">
             <h5 class="card-title">Sanders and Biden Gain as Warren Collapses Among Dem-Leaning Voters: Poll</h5>
             <p class="card-text">Washington Post/ABC survey shows Biden still appears to be favorite, as Sanders gains and Warren's popularity starts to fall ahead of Iowa caucuses.</p>
           </div>
-          <a href="#"><img src="https://d.newsweek.com/en/full/1565994/cannabis-planet.webp?w=397&h=265&q=90&f=a1f1e8a1548ec6be67786481922e8bf9" alt="stories" ></a>
+          <a href="#"><img class="col-md-12" src="https://d.newsweek.com/en/full/1565994/cannabis-planet.webp?w=397&h=265&q=90&f=a1f1e8a1548ec6be67786481922e8bf9" alt="stories" ></a>
           <div class="card-body">
             <h5 class="card-title">Saudi Arabia Accelerates Ahead</h5>
             <p class="card-text">
@@ -110,10 +110,10 @@
       </div>
       <!-- second column -->
       <!-- top story -->
-      <div class="col-lg-6 sm-12">
+      <div class="col-6">
         <h1 class="main-title">TOP STORY</h1>
         <div>
-          <a href="#"><img src="https://d.newsweek.com/en/full/1566054/pete-buttigieg-bernie-sanders-new-hampshire-primary.webp?w=591&h=364&f=dc2634ba4deda3dd7d8314ee33705dac" alt="top-story" style="width: 880px;"></a>
+          <a href="#"><img class="col-md-12" src="https://d.newsweek.com/en/full/1566054/pete-buttigieg-bernie-sanders-new-hampshire-primary.webp?w=591&h=364&f=dc2634ba4deda3dd7d8314ee33705dac" alt="top-story" style="width: 880px;"></a>
           <div class="card-body">
             <h5 class="card-title">Kobe Bryant and His Daughter Killed in California Helicopter Crash</h5>
             <p class="card-text">Bryant, 41, was travelling with passengers in his private helicopter earlier this morning when the chopper experienced issues and crashed.</p>
@@ -128,7 +128,7 @@
           <h1 class="main-title">CULTURE & TRAVEL</h1>
           <div class="row">
             <div class="col">
-              <a href="#"><img src="https://d.newsweek.com/en/full/1565365/superman-oscar.webp?w=397&h=265&f=8f7f0442997e9bfd5ff72d199ac16d2c" alt="top-story" ></a>
+              <a href="#"><img class="col-md-12"  src="https://d.newsweek.com/en/full/1565365/superman-oscar.webp?w=397&h=265&f=8f7f0442997e9bfd5ff72d199ac16d2c" alt="top-story" ></a>
           <div class="card-body">
             <h5 class="card-title">These Abandoned Italian Hill Towns Are Being Resurrected</h5>
             <p class="card-text">Some of Italy's abundant ghost towns are getting a second chance thanks to artists and refugees breathing new life into these medieval villages.</p>
@@ -339,7 +339,7 @@
     </div>
   </main>
   <!-- first footer section -->
-  <!-- Editor's picks in the magazine -->
+  <!-- Editor's picks in the  -->
   <footer class="mx-5">
     <h1 class="main-title">IN THE MAGAZINE</h1>
     <div class="row">
