update ReadME.md file

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="col-lg-3 col-sm-12">
         <h1 class="main-title opinion">OPINION</h1>
         <div class="row mb-4">
-          <img class="col-3" src="https://d.newsweek.com/en/full/1566147/benny-johnson-correct.webp?w=63&h=63&f=effe5a0715a5e302c2df382dae990935" alt="opinion" style="height: 100px;">
+          <img class="col-3 h-30 w-30" src="https://d.newsweek.com/en/full/1566147/benny-johnson-correct.webp?w=63&h=63&f=effe5a0715a5e302c2df382dae990935" alt="opinion">
           <div class="col">
             <p class="side-para">Time for Europe and U.S. to Face China's Global Threat—Together</p>
             <p class="auth">BY ARIEL COHEN</p>
