change the last two images before the footer

--- a/index.html
+++ b/index.html
@@ -645,9 +645,9 @@
         </div>
       </div>
       <div class="row">
-        <div class="col">
+        <div class="col mx-5">
           <div class="media mb-3 mt-5">
-            <img class="mr-3 h-100%" src="https://d.newsweek.com/en/full/1566693/president-donald-trump.webp?w=135&h=90&f=762e4bd878d13e5482b04fe5a8521682">
+            <img class="mr-3" src="https://d.newsweek.com/en/full/1564924/february-14-2020-cover.jpg?w=170&q=95&f=c1d5601167747525a4d15e56749350ec">
             <div class="media-body">
               <h5 class="card-title">The Video Trump Shared of Pelosi Isn't Real. Leave It Up Anyway</h5>
               <p>All Access + Delivery</p>
@@ -656,7 +656,7 @@
         </div>
         <div class="col">
           <div class="media mb-3 mt-5">
-            <img class="mr-3" src="https://d.newsweek.com/en/full/1566693/president-donald-trump.webp?w=135&h=90&f=762e4bd878d13e5482b04fe5a8521682">
+            <img class="mr-3" src="https://d.newsweek.com/en/full/1564924/february-14-2020-cover.jpg?w=170&q=95&f=c1d5601167747525a4d15e56749350ec">
             <div class="media-body">
               <h5 class="card-title">The Video Trump Shared of Pelosi Isn't Real. Leave It Up Anyway</h5>
               <P>Take back your inbox</P>
