fix CSS stylelint errors

--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
         <div class="col-sm-12 col-md-6">
           <div class="clearfix">
             <img src="https://d.newsweek.com/en/full/1566954/february-21-28-2020-cover.jpg?w=170&q=95&f=4266076976cfcb9a853392f06c8a02c1" alt="sbscribe" class="float-left mr-3">
-            <h6 class="footer-text">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h6>
+            <h6 class="footer-text font-weight-bold">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h6>
             <p class="footer-par">All Access + Weekly Delivery.
               Choose A Membership That's Perfect for You!</p>
               <button class="subscribe2 font-weight-bold mt-5">SUBSCRIBE<i class="fa fa-chevron-right pl-3"></i></button>
