add buttons texts images

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
       <h5 class="main-title">FEATURED STORIES</h5>
       <div class="card">
         <img src="https://d.newsweek.com/en/full/1566512/president-donald-trump-white-house.webp?w=466&h=311&q=90&f=b2ffa18eeb9cb7090b5a15c5b331642d" class="card-img-top" alt="responsiveness"  class="img-fluid" >
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title font-weight-bold">Could Coronavirus Really Be Killed by Hot Weather? Scientists Weigh In</h5>
           <p class="card-text">The bug known as 2019-nCoV has killed over 1,000 people and spread to over 25 countries and territories.</p>
@@ -105,7 +106,7 @@
       </div>
       <div class="card mt-5">
         <img src="https://d.newsweek.com/en/full/1566109/fred-guttenberg.webp?w=466&h=311&q=90&f=bb17841b0442e63f9dec17d26cee0034" class="card-img-top" alt="responsiveness" class="img-fluid">
-        
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title">Who Won the New Hampshire Primary in Past Elections, What It Means for 2020</h5>
           <p class="card-text">The New England state's first-in-the-nation primary takes place on February 11.</p>
@@ -113,6 +114,7 @@
       </div>
       <div class="card mt-5">
         <img src="https://d.newsweek.com/en/full/1566495/data-server.webp?w=466&h=311&q=90&f=089d0382a64b11a1388f3ef53de39eaf" class="card-img-top" alt="responsiveness">
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title">Parkland Father on Why He Cried Out During Trump's State of the Union</h5>
           <p class="card-text">Fred Guttenberg, who lost his daughter in the Stoneman Douglas High School shooting, said he was overcome with emotion when shouting out during President Donald Trump's address.</p>
@@ -120,6 +122,7 @@
       </div>
       <div class="card mt-5">
         <img src="https://d.newsweek.com/en/full/1565661/bernie-sanders-campaigns-new-hampshire.webp?w=466&h=311&q=90&f=8b146c037bfb8152c608bdc03163f85e" class="card-img-top" alt="responsiveness" class="img-fliud">
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title">Female Entrepreneur Active in Tokyo and Uganda</h5>
           <p class="card-text">APT Women aims to foster and educate fledgling global business leaders like Chizu Nakamoto.</p>
@@ -127,6 +130,7 @@
       </div>
       <div class="card mt-5">
         <img src="https://d.newsweek.com/en/full/1565661/bernie-sanders-campaigns-new-hampshire.webp?w=466&h=311&q=90&f=8b146c037bfb8152c608bdc03163f85e" class="card-img-top" alt="responsiveness"  class="img-fluid" >
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title">Meet Adam Lambert in New York City!</h5>
           <p class="card-text">Enter the sweepstake for your chance to meet music sensation Adam Lambert and attend the live taping of his appearance on Newsweek Conversations.</p> 
@@ -134,6 +138,7 @@
       </div>
       <div class="card mt-5">
         <img src="https://d.newsweek.com/en/full/1565661/bernie-sanders-campaigns-new-hampshire.webp?w=466&h=311&q=90&f=8b146c037bfb8152c608bdc03163f85e" class="card-img-top" alt="responsiveness"  class="img-fluid" >
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title">If You or a Loved One Has Been Injured, Who Can Champion Your Cause?</h5>
           <p class="card-text">Logic dictates that when you need a good personal injury attorney, you’re going to be in a stressful, vulnerable and overwhelming situation. It is vital that you speak to an attorney who can ensure that you are not taken advantage of. We look at some of the leaders in the field.</p>  
@@ -141,6 +146,7 @@
       </div>
       <div class="card mt-5">
         <img src="https://d.newsweek.com/en/full/1566109/fred-guttenberg.webp?w=466&h=311&q=90&f=bb17841b0442e63f9dec17d26cee0034" class="card-img-top" alt="responsiveness"  class="img-fluid" >
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title">Embark on a Career in Teaching With a Leading School</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -148,6 +154,7 @@
       </div>
       <div class="card mt-5">
         <img src="https://d.newsweek.com/en/full/1566109/fred-guttenberg.webp?w=466&h=311&q=90&f=bb17841b0442e63f9dec17d26cee0034" class="card-img-top" alt="responsiveness"  class="img-fluid" >
+        <button class="but w-25 font-weight-bold">POLITICS</button>
         <div class="card-body">
           <h5 class="card-title">Embark on a Career in Teaching With a Leading School</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -414,6 +421,7 @@
         </div>
         <div class="card">
           <img src="https://d.newsweek.com/en/full/1566495/data-server.webp?w=466&h=311&q=90&f=089d0382a64b11a1388f3ef53de39eaf" class="card-img-top" alt="responsiveness">
+          <button class="but w-25 font-weight-bold">POLITICS</button>
           <div class="card-body">
             <h5 class="card-title">Parkland Father on Why He Cried Out During Trump's State of the Union</h5>
             <p class="card-text">Fred Guttenberg, who lost his daughter in the Stoneman Douglas High School shooting, said he was overcome with emotion when shouting out during President Donald Trump's address.</p>
@@ -421,6 +429,7 @@
         </div>
         <div class="card mt-3">
           <img src="https://d.newsweek.com/en/full/1566495/data-server.webp?w=466&h=311&q=90&f=089d0382a64b11a1388f3ef53de39eaf" class="card-img-top" alt="responsiveness">
+          <button class="but w-25 font-weight-bold">POLITICS</button>
           <div class="card-body">
             <h5 class="card-title">Parkland Father on Why He Cried Out During Trump's State of the Union</h5>
             <p class="card-text">Fred Guttenberg, who lost his daughter in the Stoneman Douglas High School shooting, said he was overcome with emotion when shouting out during President Donald Trump's address.</p>
@@ -428,6 +437,7 @@
         </div>
         <div class="card mt-3">
           <img src="https://d.newsweek.com/en/full/1566495/data-server.webp?w=466&h=311&q=90&f=089d0382a64b11a1388f3ef53de39eaf" class="card-img-top" alt="responsiveness">
+          <button class="but w-25 font-weight-bold">POLITICS</button>
           <div class="card-body">
             <h5 class="card-title">Parkland Father on Why He Cried Out During Trump's State of the Union</h5>
             <p class="card-text">Fred Guttenberg, who lost his daughter in the Stoneman Douglas High School shooting, said he was overcome with emotion when shouting out during President Donald Trump's address.</p>
@@ -435,6 +445,7 @@
         </div>
         <div class="card mt-3">
           <img src="https://d.newsweek.com/en/full/1566495/data-server.webp?w=466&h=311&q=90&f=089d0382a64b11a1388f3ef53de39eaf" class="card-img-top" alt="responsiveness">
+          <button class="but w-25 font-weight-bold">POLITICS</button>
           <div class="card-body">
             <h5 class="card-title">Parkland Father on Why He Cried Out During Trump's State of the Union</h5>
             <p class="card-text">Fred Guttenberg, who lost his daughter in the Stoneman Douglas High School shooting, said he was overcome with emotion when shouting out during President Donald Trump's address.</p>
@@ -442,6 +453,7 @@
         </div>
         <div class="card mt-3">
           <img src="https://d.newsweek.com/en/full/1566495/data-server.webp?w=466&h=311&q=90&f=089d0382a64b11a1388f3ef53de39eaf" class="card-img-top" alt="responsiveness">
+          <button class="but w-25 font-weight-bold">POLITICS</button>
           <div class="card-body">
             <h5 class="card-title">Parkland Father on Why He Cried Out During Trump's State of the Union</h5>
             <p class="card-text">Fred Guttenberg, who lost his daughter in the Stoneman Douglas High School shooting, said he was overcome with emotion when shouting out during President Donald Trump's address.</p>
@@ -454,29 +466,13 @@
   <h5 class="main-title">THE MAGAZINE</h5>
   <div class="row">
     <div class="col-md-3 col-sm-12">
-      <div class="card mt-3 col-sm-12">
-        <img class="first-article"src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
-        <div class="card-body">
-        </div>
-      </div>
-      <div class="card mt-3 col-sm-12">
-        <img class="first-article" src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
-        <div class="card-body">
-          <h5 class="card-title">Exclusive: While Everyone Focuses On Iran, US Military 
-            </h5>
-        </div>
-      </div>
-
-    </div>
-    <div class="col-md-3 col-sm-12">
       <div class="card">
-        <img class="first-article" src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
+        <img src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
         <div class="card-body">
-          <h5 class="card-title">Airport Restaurants Worthy of a Layover</h5>
         </div>
       </div>
       <div class="card mt-3">
-        <img class="first-article" src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
+        <img src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
         <div class="card-body">
           <h5 class="card-title">Airport Restaurants Worthy of a Layover</h5>
         </div>
@@ -484,13 +480,27 @@
     </div>
     <div class="col-md-3 col-sm-12">
       <div class="card">
-        <img class="first-article" src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
+        <img src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
         <div class="card-body">
           <h5 class="card-title">Airport Restaurants Worthy of a Layover</h5>
         </div>
       </div>
       <div class="card mt-3">
-        <img class="first-article" src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
+        <img src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
+        <div class="card-body">
+          <h5 class="card-title">Airport Restaurants Worthy of a Layover</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 col-sm-12">
+      <div class="card">
+        <img src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
+        <div class="card-body">
+          <h5 class="card-title">Airport Restaurants Worthy of a Layover</h5>
+        </div>
+      </div>
+      <div class="card mt-3">
+        <img src="https://d.newsweek.com/en/full/1556716/twa-hotel.webp?w=397&h=265&f=7af1ce5444b4a2b638b278b6207aeb3a" class="card-img-top" alt="responsiveness" class="img-fluid">
         <div class="card-body">
           <h5 class="card-title">Airport Restaurants Worthy of a Layover</h5>
         </div>
@@ -511,6 +521,8 @@
       </div>
     </div>
   </div>
+  
+
   <!-- Editor's Picks -->
   <h5 class="main-title">EDITOR'S PICKS</h5>
   <div class="row">
