add buttons texts images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <div class="header1">
+    <div class="header1 container-fluid">
     <nav class="navbar navbar-expand-lg px-3 d-flex justify-content-between ">
       <ul class="navbar-nav justify-content-between navbar-expand">
        
@@ -33,7 +33,7 @@
 </div>
   </header>
 <header>
-  <div class="header2 container-fluid">
+  <div class="header2 container-fluid w-100">
     <!-- first nav section -->
     <nav class="navbar text-light align-items-end pb-5 pt-3 pt-5">
      <span class="date d-none d-lg-inline-block">Sub, Feb 19-2020</span>
@@ -736,7 +736,7 @@
       
       <footer>
     <div class="icon-col row mx-5">
-      <div class="news col ">
+      <div class="news col-md-flex-wrap-nowrap ">
       <h1 class="footer-news">THE NEWS WEEK</h1>
     </div>
     <div class="cons col d-flex">
