--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
         </div>
         <div class="col">
           <div class="media mb-3">
-            <img class="slide-show-img mr-3" src="https://d.newsweek.com/en/full/1566693/president-donald-trump.webp?w=135&h=90&f=762e4bd878d13e5482b04fe5a8521682">
+            <img class="slide-show-img mr-3" src="https://d.newsweek.com/en/full/1566693/president-donald-trump.webp?w=135&h=90&f=762e4bd878d13e5482b04fe5a8521682" alt="responsiveness">
             <div class="media-body">
               <h6 class="side-para">The Video Trump Shared of Pelosi Isn't Real. Leave It Up Anyway</h6>
             </div>
@@ -765,8 +765,7 @@
         </ul>
       </div>
       </div>
-    </footer> 
-  </div>     
+    </footer>     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
